# aka

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: backend.rs  commands.rs  enrichment.rs  indexer.rs  lib.rs  main.rs  rename.rs
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  api-base.ts  app-update-api.ts  client-integration-api.ts  client-integrations-api.ts  desktop-api.ts  index-log.ts  index.css  main.tsx  mock.ts  release-api.ts  repo-api.ts  search-api.ts  store.ts  theme.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
clients/: README.md  install.ps1  install.sh
clients/.claude-plugin/: marketplace.json
clients/claude-code/: .mcp.json  README.md
clients/claude-code/.claude-plugin/: plugin.json
clients/codex/: AGENTS-aka.md  README.md  config.toml.snippet
clients/opencode/: AGENTS-aka.md  README.md  opencode.json.snippet
crates/aka-core/: Cargo.toml  build.rs
crates/aka-core/src/: artifact.rs  engine.rs  enrichment.rs  incremental.rs  lib.rs  paths.rs  registry.rs  settings.rs  types.rs
crates/aka-core/src/engine/: build_config_scan.rs  cache_synth.rs  command_synth.rs  config_synth.rs  dependency_synth.rs  embedded.rs  event_synth.rs  fact_producer.rs  graphql_synth.rs  job_synth.rs  migration_synth.rs  persistence_access_synth.rs  persistence_java_synth.rs  persistence_model_synth.rs  persistence_mybatis_synth.rs  persistence_pymongo_synth.rs  persistence_synth.rs  policy_synth.rs  property_synth.rs  resource_synth.rs  route_annotated_synth.rs  route_consumer_synth.rs  route_django_synth.rs  route_python_prefix_synth.rs  route_realtime_synth.rs  route_shape.rs  route_shape_drf.rs  route_shape_java.rs  route_shape_java_builder.rs  route_shape_python.rs  route_shape_python_calls.rs  route_spring_functional_synth.rs  source_scan.rs  source_symbol_synth.rs  tests.rs  tool_synth.rs  topic_synth.rs  transaction_synth.rs
crates/aka-core/src/engine/cache_synth/: java_redis.rs  python_redis.rs
crates/aka-core/src/engine/dependency_synth/: java.rs  lookup.rs  mod.rs  python.rs
crates/aka-core/src/engine/job_synth/: batch.rs  config.rs  detect.rs  mod.rs  trigger.rs  types.rs
crates/aka-core/src/engine/persistence_access_synth/: java_mongo_template.rs
crates/aka-core/src/engine/resource_synth/: ai_provider.rs  analytics.rs  business_api.rs  feature_flag.rs  http.rs  http_config.rs  identity.rs  infra_config.rs  java_azure_blob.rs  java_s3.rs  notification.rs  observability.rs  payment.rs  python_azure_blob.rs  python_gcs.rs  search_index.rs  secret_provider.rs  storage_config.rs  vector_store.rs  warehouse.rs  workflow_engine.rs
crates/aka-core/src/engine/resource_synth/notification/: config.rs  java.rs  python.rs
crates/aka-core/src/engine/source_symbol_synth/: java.rs  mod.rs  python.rs
crates/aka-core/src/engine/tests/: semantic_cache.rs  semantic_commands.rs  semantic_dependencies.rs  semantic_events.rs  semantic_graphql.rs  semantic_messaging.rs  semantic_persistence.rs  semantic_policies.rs  semantic_process.rs  semantic_resources.rs  semantic_routes.rs  semantic_stream.rs  semantic_transactions.rs  source_symbols.rs
crates/aka-core/src/engine/tests/semantic_commands/: java.rs  python.rs
crates/aka-core/src/engine/tests/semantic_messaging/: java_jobs.rs  python_job_decorators.rs  python_jobs.rs
crates/aka-core/src/engine/tests/semantic_persistence/: java.rs  java_mongo.rs  migrations.rs  python_django.rs  python_pymongo.rs  python_sql.rs  python_sqlalchemy.rs
crates/aka-core/src/engine/tests/semantic_resources/: ai_provider.rs  analytics.rs  business_api.rs  feature_flag.rs  http.rs  http_config.rs  identity.rs  infra_config.rs  notification.rs  object_storage.rs  observability.rs  payment.rs  search_index.rs  secret_provider.rs  storage_config.rs  vector_store.rs  warehouse.rs  workflow_engine.rs
crates/aka-core/src/engine/tests/semantic_routes/: annotated.rs  drf_actions.rs  drf_shapes.rs  http_consumers.rs  python_shapes.rs  realtime.rs  spring_shapes.rs
crates/aka-core/src/engine/topic_synth/: config.rs  python.rs  stream.rs
crates/aka-facts/: Cargo.toml
crates/aka-facts/src/: lib.rs  producer.rs  scip_import.rs
crates/aka-graph/: Cargo.toml
crates/aka-graph/src/: adjacency.rs  ego.rs  error.rs  layout.rs  lib.rs  lod.rs  process.rs  store.rs
crates/aka-graph/tests/: graph_tests.rs
crates/aka-mcp/: Cargo.toml
crates/aka-mcp/src/: backend.rs  lib.rs  mock.rs  ops.rs  service.rs
crates/aka-mcp/tests/: e2e.rs  http.rs  tools.rs
crates/aka-mcp/tests/support/: fixture_backend.rs  mod.rs
crates/aka-search/: Cargo.toml
crates/aka-search/src/: index.rs  lib.rs  rrf.rs  tokenizer.rs  vector.rs
crates/aka-search/tests/: perf_smoke.rs  search_quality.rs
crates/aka-server/: Cargo.toml
crates/aka-server/src/: client_integrations.rs  lib.rs
crates/aka-server/tests/: api.rs
crates/aka-server/tests/support/: fixture_backend.rs
docs/: architecture.md  clients.md  deploy.md
docs/contracts/: artifacts.md
docs/handoff/: 2026-06-24-fused-facts-pipeline.md
engine/: ENGINE_SHA  README.md
scripts/: open-macos-dmg.sh  oss-analyzer-gopls-lsp.mjs  oss-analyzer-jdtls-lsp.mjs  oss-analyzer-pyright-lsp.mjs  oss-analyzer-rust-analyzer-lsp.mjs  oss-analyzer-stack-graphs-python.mjs  oss-analyzer-typescript-lsp.mjs  package-release.sh  pin-engine-ref.sh  release-manifest.mjs  smoke-client-packages.sh  smoke-oss-analyzer-gopls.sh  smoke-oss-analyzer-jdtls.sh  smoke-oss-analyzer-pyright.sh  smoke-oss-analyzer-rust-analyzer.sh  smoke-oss-analyzer-scip.sh  smoke-oss-analyzer-stack-graphs-python.sh  smoke-oss-analyzer-typescript.sh  smoke-windows-desktop.ps1  smoke-windows-portable.ps1  sync-engine.sh
(+36 files in other folders)
