[workspace]
resolver = "2"
exclude = ["apps/desktop/src-tauri", "engine"]
members = [
    "crates/aka-facts",
    "crates/aka-core",
    "crates/aka-search",
    "crates/aka-graph",
    "crates/aka-mcp",
    "crates/aka-server",
    "apps/cli",
]

[workspace.package]
version = "0.1.29"
edition = "2021"
publish = false
