[package]
name = "aka-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
embedded-engine = ["aka-core/embedded-engine"]
scip-import = ["aka-core/scip-import"]

[[bin]]
name = "aka"
path = "src/main.rs"

[dependencies]
aka-core = { path = "../../crates/aka-core" }
aka-graph = { path = "../../crates/aka-graph" }
aka-mcp = { path = "../../crates/aka-mcp" }
aka-search = { path = "../../crates/aka-search" }
aka-server = { path = "../../crates/aka-server" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.21.0", default-features = false, features = ["https", "vendored-libgit2", "vendored-openssl"] }
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
protobuf = "=3.7.2"
scip = "0.8.1"
tempfile = "3"
