[package]
name = "aka-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
