[package]
name = "aka-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[features]
default = []
embedded-engine = []

[dependencies]
aka-facts = { path = "../aka-facts" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
libloading = "0.8"
