[package]
name = "aka-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[features]
default = []
embedded-engine = []
scip-import = ["aka-facts/scip-import"]

[dependencies]
aka-facts = { path = "../aka-facts" }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
libloading = "0.8"
