[package]
name = "aka-mcp"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aka-core = { path = "../aka-core" }
anyhow = "1"
# default features = base64 + macros + server；transport-io 提供服务端 stdio。
rmcp = { version = "1.7", features = ["transport-io"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
# 端到端测试需要 client 角色（内存 duplex transport 走 transport-async-rw，已随 server 启用）。
rmcp = { version = "1.7", features = ["client"] }
