[package]
name = "aka-search"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aka-core = { path = "../aka-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.26"
thiserror = "2"
usearch = "2"

[dev-dependencies]
fastrand = "2"
tempfile = "3"
