[package]
name = "aka-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
# Backend trait 与 ops 输出 DTO 共享自 aka-mcp（aka-mcp 不依赖本 crate，无循环）。
aka-mcp = { path = "../aka-mcp" }
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1"
regex = "1"
tower = { version = "0.5", features = ["util"] }
