[package]
name = "aka-desktop"
version = "0.1.0"
description = "aka — code omniscience engine, desktop shell"
authors = ["aka"]
edition = "2021"
publish = false

[lib]
name = "aka_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aka-cli = { path = "../../cli" }
aka-mcp = { path = "../../../crates/aka-mcp" }
anyhow = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
