[package]
name = "aka-desktop"
version = "0.1.25"
description = "aka — code omniscience engine, desktop shell"
authors = ["aka"]
edition = "2021"
publish = false

[lib]
name = "aka_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
embedded-engine = ["aka-cli/embedded-engine", "aka-core/embedded-engine"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aka-cli = { path = "../../cli" }
aka-core = { path = "../../../crates/aka-core" }
aka-mcp = { path = "../../../crates/aka-mcp" }
anyhow = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
